force-app/main/default/objects/CA_Boleto__c/CA_Boleto__c.object-meta.xml
<CustomObject>
    <label>Boleto</label>
    <nameField>
        <label>Boleto Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boletos</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>