force-app/main/default/objects/CA_Boleto__c/fields/CA_CodigoBarras__c.field-meta.xml
<CustomField>
    <fullName>CA_CodigoBarras__c</fullName>
    <label>Código de Barras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>