force-app/main/default/objects/CA_Boleto__c/fields/CA_Contrato__c.field-meta.xml
<CustomField>
    <fullName>CA_Contrato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Boletos</relationshipLabel>
    <relationshipName>Boletos</relationshipName>
    <type>Lookup</type>
</CustomField>