force-app/main/default/objects/CA_Boleto__c/fields/CA_DataPagamento__c.field-meta.xml
<CustomField>
    <fullName>CA_DataPagamento__c</fullName>
    <label>Data Pagamento</label>
    <type>Date</type>
</CustomField>