force-app/main/default/objects/CA_Boleto__c/fields/CA_DataRegistro__c.field-meta.xml
<CustomField>
    <fullName>CA_DataRegistro__c</fullName>
    <label>Data Registro</label>
    <type>Date</type>
</CustomField>