force-app/main/default/objects/CA_Boleto__c/fields/CA_DataVencimento__c.field-meta.xml
<CustomField>
    <fullName>CA_DataVencimento__c</fullName>
    <label>Data Vencimento</label>
    <type>Date</type>
</CustomField>