force-app/main/default/objects/CA_Boleto__c/fields/CA_FoiGarantido__c.field-meta.xml
<CustomField>
    <fullName>CA_FoiGarantido__c</fullName>
    <label>Foi Garantido?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>