force-app/main/default/objects/CA_Boleto__c/fields/CA_FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>CA_FormaPagamento__c</fullName>
    <label>Forma Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>