force-app/main/default/objects/CA_Boleto__c/fields/CA_Pagador__c.field-meta.xml
<CustomField>
    <fullName>CA_Pagador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pagador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Boletos</relationshipLabel>
    <relationshipName>Boletos</relationshipName>
    <type>Lookup</type>
</CustomField>