force-app/main/default/objects/CA_Boleto__c/fields/CA_SituacaoRegistroBanco__c.field-meta.xml
<CustomField>
    <fullName>CA_SituacaoRegistroBanco__c</fullName>
    <label>Situação Registro Banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>