force-app/main/default/objects/CA_Boleto__c/fields/CA_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CA_Tipo__c</fullName>
    <label>Tipo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>