force-app/main/default/objects/CA_Boleto__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>CA_Imovel__c</columns>
    <columns>CA_DataVencimento__c</columns>
    <columns>CA_Situacao__c</columns>
    <columns>CA_ValorTotal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CA_Situacao__c</field>
        <operation>contains</operation>
        <value>Aberto</value>
    </filters>
    <label>Todos</label>
</ListView>